# regime-shap

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  publish.yml
docs/: api.md  changelog.md  concepts.md  conf.py  examples.md  getting-started.md  index.md  installation.md  quickstart.md
examples/: 01_finance_market_regimes.ipynb  02_energy_demand_regimes.ipynb  02_energy_seasonal_demand.ipynb  README.md
examples/data/: README.md  gb_electricity_demand.csv
regime_shap/: __init__.py  breaks.py  compare.py  core.py  plots.py  report.py  stability.py
space/: README.md  app.py  requirements.txt
space/data/: market_regimes.csv
tests/: __init__.py  conftest.py  test_breaks.py  test_compare.py  test_core.py  test_plots.py  test_report.py  test_stability.py
